--- a/style.css
+++ b/style.css
@@ -1,9 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Lalezar&display=swap");
+
 html {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Lalezar", cursive;
+  scroll-behavior: smooth;
+}
+ul {
+  padding: 0;
+  list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+/* ------------------------ */
 .l-header {
   width: 100%;
 
@@ -37,8 +54,11 @@ html {
     background-color: #1d2521;
     transition: 0.4s;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 0 0 1rem 1rem;
+    border-radius: 1rem 1rem 1rem 1rem;
     z-index: 100;
+  }
+  .nav {
+    height: 5rem;
   }
 }
 
@@ -51,6 +71,7 @@ html {
 .nav__toggle {
   color: #c7d1cc;
   font-weight: 500;
+  font-size: 2rem;
 }
 
 .nav__logo:hover {
@@ -68,17 +89,56 @@ html {
 .nav__toggle {
   font-size: 1.3rem;
   cursor: pointer;
+  display: flex;
 }
 
 /* Show menu */
 .show-menu {
-  top: 3rem;
+  top: 0;
 }
+
+.active-link {
+  color: #069c54;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    margin: 0;
+  }
+
+  .nav {
+    height: 5rem;
+  }
+  .nav__list {
+    display: flex;
+  }
+  .nav__item {
+    margin-left: 2.5rem;
+    margin-bottom: 0;
+  }
+  .nav__toggle {
+    display: none;
+  }
+
+  .change-theme {
+    position: initial;
+    margin-left: 1rem;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .bd-container {
+    margin-left: auto;
+    margin-right: auto;
+    height: 15vh;
+  }
+}
+
 /* --------------------------------- */
 .parallax-container {
   margin: 0;
   background-color: aliceblue;
-  font-size: 50px;
+
   height: 100vh;
   width: 100%;
 }
@@ -88,6 +148,8 @@ html {
   background-attachment: fixed;
   background-size: cover;
   height: 100%;
+  display: flex;
+  align-items: center;
 }
 h1 {
   margin: 0;
