--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ html {
   font-family: "Lalezar", cursive;
   scroll-behavior: smooth;
 }
+
+body {
+  margin: 0;
+}
+
 ul {
   padding: 0;
   list-style: none;
