--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@ html {
   padding: 0;
   font-family: "Lalezar", cursive;
   scroll-behavior: smooth;
+  height: -webkit-fill-available;
 }
 
 body {
   margin: 0;
+  height: -webkit-fill-available;
 }
 
 ul {
